# cvTracking

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  cvTrackingConfig.cmake.in  cvtracking.pc.cmake.in
cvBlob/: CMakeLists.txt  cvRender.cpp  cvRender.h  cvaux.cpp  cvblob.cpp  cvblob.h  cvcolor.cpp  cvcontour.cpp  cvlabel.cpp  cvt.h  cvtrack.cpp
cvTracking/: CMakeLists.txt  cvRender.cpp  cvRender.h  cvblob.cpp  cvt.h  cvtrack.cpp
homebrew/: cvtracking.rb
samples/: CMakeLists.txt  green_object_tracking.cpp  red_object_tracking.cpp
test/: CMakeLists.txt  test.cpp  test_random.cpp  test_tracking.cpp
